--- a/flores.html
+++ b/flores.html
@@ -305,7 +305,7 @@
             </div>
           </div>
         </div>
-        <div class="message">Te regalo estas flores <br>Feliz 21 de setiembre</div>
+        <div class="message">Te regalo estas flores <br>Feliz 21 de setiembre AMOR</div>
       </body>
 </body>
 </html>
